Bug #4673: Fix work-break inside error messages
(cherry picked from commit 7bf2c9c38a2e9e06f1dc4350ad577dcd1d0d1a68)

--- a/src/sunstone/public/scss/_jgrowl.scss
+++ b/src/sunstone/public/scss/_jgrowl.scss
@@ -7,6 +7,7 @@
     background-color: #dfdfdf!important;
     color: #333;
     width: 335px !important;
+    word-break: normal;
 }
 
 .jGrowl-notify-error {
